<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".activities.AgregarBateria">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitleRegistrarBateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/IUF1_1_3_TITLE"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textSize="@dimen/titulos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <!-- NOMBRE -->
        <LinearLayout
            android:id="@+id/area_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleRegistrarBateria">

            <ImageView
                android:id="@+id/img_sol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_car_battery" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp">
                <EditText
                    android:id="@+id/campo_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="45"
                    android:hint="@string/IUF1_1_3_LBL1"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!-- Voltaje Maximo -->
        <LinearLayout
            android:id="@+id/area_voltajeMaximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_nombre">

            <ImageView
                android:id="@+id/img_voltajeMaximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_high_voltage" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_voltajeMaximo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp">
                <EditText
                    android:id="@+id/campo_voltajeMaximo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/IUF1_1_3_LBL2"
                    android:maxLength="4"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!-- Voltaje Minimo -->
        <LinearLayout
            android:id="@+id/area_voltajeMinimo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_voltajeMaximo">

            <ImageView
                android:id="@+id/img_voltajeMinimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_electric_plug" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_voltajeMinimo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp">
                <EditText
                    android:id="@+id/campo_voltajeMinimo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/IUF1_1_3_LBL3"
                    android:maxLength="4"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <!-- Numero de celdas -->
        <LinearLayout
            android:id="@+id/area_celdas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:maxLength="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_voltajeMinimo">

            <ImageView
                android:id="@+id/img_celdas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_celdas" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_celdas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp">
                <EditText
                    android:id="@+id/campo_celdas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/IUF1_1_3_LBL4"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <!-- Temperatura -->
        <LinearLayout
            android:id="@+id/area_temperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:maxLength="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_celdas">

            <ImageView
                android:id="@+id/img_temperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_termometro" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_temperatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp">
                <EditText
                    android:id="@+id/campo_temperatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/IUF1_1_3_LBL5"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/botonBackground"
            android:text="@string/OP_ACEPTAR"
            android:textColor="@color/botonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/campo_memoria" />


        <Switch
            android:id="@+id/campo_memoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:text="@string/IUF1_1_3_LBL6"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_temperatura" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>