<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




                <!-- AGREGAR DISPOSITIVO -->
        <Button
            android:id="@+id/btnNoticias"
            android:layout_width="120dp"
            android:layout_height="105dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:height="60dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_add_device"
            android:drawablePadding="6dp"
            android:gravity="left|center"
            android:padding="6dp"
            android:text="@string/IUF1_BTN1"
            android:textAlignment="center"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnPaneles"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

                <!-- PANELES FOTOVOLTAICOS -->
        <Button
            android:id="@+id/btnPaneles"
            android:layout_width="120dp"
            android:layout_height="105dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:height="60dp"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/ic_sol"
            android:drawablePadding="6dp"
            android:gravity="left|center"
            android:padding="6dp"
            android:text="@string/IUF1_BTN2"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


                <!--ORIENTACION OPTIMA -->

                <Button
                    android:id="@+id/btnOrientacion"
                    android:background="@drawable/button_background"

                    android:drawablePadding="6dp"
                    android:gravity="left|center"
                    android:height="60dp"
                    android:padding="6dp"
                    android:text="@string/IUF1_BTN3"
                    android:textSize="12sp"
                    android:textColor="#000"
                    android:textAlignment="center"
                    android:textStyle="bold" android:layout_height="105dp"
                    android:layout_width="120dp"
                    android:layout_marginTop="80dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnNoticias" android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    />


                <!-- MONITOREAR MECANISMO -->


            </android.support.constraint.ConstraintLayout>
        </ScrollView>



