<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrarPanel">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitleRegistrarPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/IUF1_1_1_TITLE"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textSize="@dimen/titulos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <!-- NOMBRE -->
        <LinearLayout
            android:id="@+id/area_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleRegistrarPanel">

            <ImageView
                android:id="@+id/img_sol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_wb_sunny_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp">
                <EditText
                    android:id="@+id/campo_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/IUF1_1_1_LBL1"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!-- Voltaje Maximo -->
        <LinearLayout
            android:id="@+id/area_voltaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_nombre">

            <ImageView
                android:id="@+id/img_voltaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_high_voltage" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_voltaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp">
                <EditText
                    android:id="@+id/campo_voltaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/IUF1_1_1_LBL2"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!-- Corriente Maxima -->
        <LinearLayout
            android:id="@+id/area_corriente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_voltaje">

            <ImageView
                android:id="@+id/img_corriente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_electric_plug" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_corriente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp">
                <EditText
                    android:id="@+id/campo_corriente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/IUF1_1_1_LBL3"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/botonBackground"
            android:text="@string/OP_ACEPTAR"
            android:textColor="@color/botonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_corriente" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>