<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textViewTitlePaneles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/IUF1_2_TITLE"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textSize="@dimen/titulos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewPaneles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/IUF1_1_TITLE"
            app:layout_constraintEnd_toStartOf="@+id/textViewTitlePaneles"
            app:layout_constraintHorizontal_bias="0.836"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sol"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/funcionamientoSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:text="@string/IUF1_2_LBL1"
            android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitlePaneles" />

        <TextView
            android:id="@+id/instalacionTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="left"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Info"
            app:layout_constraintBottom_toTopOf="@+id/instalacionIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instalacionSubTitle"
            tools:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <TextView
            android:id="@+id/funcionamientoTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="left"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/funcionamientoSubTitle"
            tools:textColor="@color/common_google_signin_btn_text_dark_focused" />



        <ImageView
            android:id="@+id/instalacionIV"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/IUF1_1_TITLE"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/funcionamientoIV"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/IUF1_1_TITLE"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/funcionamientoTV" />

        <TextView
            android:id="@+id/instalacionSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:text="@string/IUF1_2_LBL2"
            android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/funcionamientoIV" />

        <ImageView
            android:id="@+id/instalacionIV"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/IUF1_1_TITLE"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />




    </android.support.constraint.ConstraintLayout>

</ScrollView>